0.3.5.20
  - (zathor) [Muxer] changed the automatically adding of empty tracks a little bit

0.3.5.20
  - (zathor) [FileIndexer] + [Muxer] dialogues are not modal anymore; some cosmetics
  - (zathor) [Muxer] removed cancel button; added reset button to the video section; selecting an audio or subtitle file will automatically add a new emtpy track tab (saving two clicks)
  - (zathor) [Muxer] added option to queue several jobs without closing the mux window. Feature request #2038358
  - (zathor) [AVS Cutter] fixed increasing window height if using the "reload video" button
  - (zathor) added MeGUI icon to several tools

0.3.5.19
  - (kurtnoise) Update several Article Name from help button. Patch by XhmikosR (#3079390)
  - (kurtnoise) Update ContextHelp.xml file. Patch by XhmikosR (#3079390)
  - (kurtnoise) Remove log files shortcut from nsis scripts. Patch by XhmikosR (#3079390)
  - (kurtnoise) Remove "tools" sub directory from backupfiles_CheckedChanged() because we can have some backup files in the root folder and SearchOption.AllDirectories is used anyways.
  - (zathor) [Adaptive Muxer] resized window so that the buttons at the bottom are visible again. Bug #3090155
  - (zathor) [AutoEncode] added saving of the default mp4 device type to the "Configure AutoEncode defaults" in the settings
  - (zathor) [MKV Muxer] added support for quotes in the track names. Bug #3090689
  - (zathor) [Queue] the connection job <--> worker is going to be restored/repaired during startup if lost/wrong. Bug #3090054
  - (zathor) [AutoEncode] the "always mux the video encoding" setting applies now only to mkv container. also renamed the option and added a tooltip

0.3.5.18
  - (zathor) [OneClick] fixed "and open next" checkbox which did not always open the file dialogue. Bug #3089165
  - (zathor) [MKV Muxer] fixed rare "error parsing idx file" message
  - (zathor) [MKV Muxer] "default track" checkbox is enabled by default for the first subtitle track

0.3.5.17